pkl-core/src/test/files/LanguageSnippetTests/input/errors/delimiters/missingEmptyMultiLineStringDelimiter.pkl
// Would like to provide the usual "missing closing delimiter" error message,
// but adding EOF alternative to ML_END_QUOTE rule didn't have any effect.
res1 = """
res2 = 42